[gd_scene load_steps=4 format=3 uid="uid://drxujms5tlarp"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_abcde"]
[ext_resource type="FontFile" uid="uid://binnamcsbaeja" path="res://assets/fonts/Abaddon_Bold.ttf" id="2_fghij"]
[ext_resource type="FontFile" uid="uid://dqubc8i3xvgdr" path="res://assets/fonts/Abaddon_Light.ttf" id="3_klmno"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_abcde")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fghij")
theme_override_font_sizes/font_size = 96
text = "Paused"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResumeButton" type="Button" parent="ColorRect/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_klmno")
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_klmno")
theme_override_font_sizes/font_size = 40
text = "Quit to Main Menu"
